--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Teamwork is an internal social network for employees of an organization. The goal of this application is to facilitate more interaction between colleagues and promote team bonding.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --require @babel/core src/server.js",
+    "start": "nodemon --exec babel-node src/server.js",
     "text": "nyc mocha --require @babel/register --require @babel/polyfill src/test",
     "coverage": "nyc report --reporter=text-lcov| coveralls"
   },
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
@@ -44,6 +45,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
     "nyc": "^14.1.1"
   }
 }
