--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/server.js",
-    "text": "nyc mocha --require @babel/register --require @babel/polyfill src/test",
-    "coverage": "nyc report --reporter=text-lcov| coveralls"
+    "test": "nyc mocha --require @babel/register --require @babel/polyfill src/test",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
