--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: "node_js"
+language: node_js
 
 node_js: 
  - "stable"
@@ -7,7 +7,7 @@ cache:
   directories:
   - "node_modules"
 
- after_success:
+after_success:
   - "npm run coverage" 
   
 notifications: 
