--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Teamwork is an internal social network for employees of an organization. The goal of this application is to facilitate more interaction between colleagues and promote team bonding.",
   "main": "server.js",
   "engines": {
-    "node": "10.16.1"
+    "node": "10.16.x"
   },
   "scripts": {
     "clean": "rm -rf build && mkdir build",
