--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -58,7 +59,6 @@
     "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "nyc": "^14.1.1",
-    "swagger-ui-express": "^4.1.2"
+    "nyc": "^14.1.1"
   }
 }
