--- a/.envSample
+++ b/.envSample
@@ -12,4 +12,8 @@ CLOUD_NAME = your cloudinary name
 API_KEY = your cloudinary key
 API_SECRET = your cloudinary secret kry
 
+// Admin details
+ADMIN_EMAIL = your choice
+ADMIN_PASSWORD = your choice
+
 TEST_TOKEN = generated token
