--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/runtime": "^7.7.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -48,6 +48,7 @@
     "express-fileupload": "^1.1.6-alpha.6",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
+    "sequelize": "^5.21.8",
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
