--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "engines": {
     "node": "10.16.x"
   },
+  "jest": {
+    "testEnvironment": "node"
+  },
   "scripts": {
     "clean": "rm -rf build && mkdir build",
     "build-babel": "babel -d ./build ./src -s",
     "build": "npm run clean && npm run build-babel",
     "start": "npm run build && node ./build/server.js",
     "start-dev": "nodemon --exec babel-node src/server.js",
-    "test": "nyc mocha --require @babel/register --require @babel/polyfill src/test --exit",
+    "set-env": "set NODE_ENV=test",
+    "test": "npm run set-env && jest --verbose --silent --runInBand --detectOpenHandles",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -32,33 +36,35 @@
   },
   "homepage": "https://github.com/Mohamilr/Team-work-api#readme",
   "dependencies": {
-    "@babel/cli": "^7.6.4",
-    "@babel/core": "^7.6.4",
-    "@babel/node": "^7.6.3",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/runtime": "^7.7.2",
-    "bcrypt": "^3.0.6",
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/runtime": "^7.10.2",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
-    "cloudinary": "^1.16.0",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6-alpha.6",
+    "express-fileupload": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.12.1",
-    "swagger-ui-express": "^4.1.2"
+    "pg": "^7.18.2",
+    "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "coveralls": "^3.0.7",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "mocha": "^6.2.2",
+    "coveralls": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "jest": "^26.0.1",
+    "mocha": "^6.2.3",
     "nodemon": "^1.19.4",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "supertest": "^4.0.2"
   }
 }
